--- a/app/views/shared/authentication/_email_registration_form.html.erb
+++ b/app/views/shared/authentication/_email_registration_form.html.erb
@@ -20,7 +20,7 @@
           </ul>
         </div>
       </div>
-    <% elsif forem_creator_flow_enabled? %>
+    <% elsif true %>
       <%# TODO: Extract this into its own form %>
       <div class="align-center">
         <p class="pb-4 fw-bold">Almost there!</p>
@@ -108,9 +108,15 @@
       </div>
     <% end %>
 
-    <div class="flex flex-col pt-3">
-      <%= f.submit "Create admin account", class: "crayons-btn" %>
-    </div>
-
+    <% if true %>
+      <%# TODO: Extract this into its own form %>
+      <div class="flex flex-col pt-3">
+        <%= f.submit "Create admin account", class: "crayons-btn" %>
+      </div>
+    <% else %>
+      <div class="actions pt-3">
+        <%= f.submit "Sign up", class: "crayons-btn" %>
+      </div>
+    <% end %>
   <% end %>
 </div>
